[package]
name = "script-macro"
version = "0.4.0"
authors = ["Lukas George lukas@zerosync.org"]
edition = "2021"
description = "Inline Tondi scripts proc_macro"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
tondi-consensus-core = { version = "0.17.0", path = "../../Tondi/consensus/core" }
tondi-txscript = { version = "0.17.0", path = "../../Tondi/crypto/txscript" }
quote = "1.0.23"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
